--- a/pom.xml
+++ b/pom.xml
@@ -35,5 +35,9 @@
 
 
     </dependencies>
-    
+    <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+    </properties>
+
 </project>
