--- a/src/test/resources/selenide.properties
+++ b/src/test/resources/selenide.properties
@@ -1,4 +1,4 @@
 
-selenide.baseUrl=https://www.grocerycrud.com/v1.x/demo/my_boss_is_in_a_hurry/bootstrap
+selenide.baseUrl=https://www.grocerycrud.com
 selenide.timeout=80000
 selenide.browser=edge
